syntax = "proto3";

package exam;

option go_package = "generated/exampb";

service ExamService {
  rpc GetExamResult(GetExamResultRequest) returns (GetExamResultResponse);
  rpc StreamExamResults(StreamExamResultsRequest) returns (stream GetExamResultResponse);

}

message GetExamResultRequest {
  string student_id = 1;
  string exam_id = 2;
}

message StreamExamResultsRequest {
  string student_id = 1;
  repeated string exam_ids = 2;
}


message GetExamResultResponse {
  string student_name = 1;
  string subject = 2;
  int32 marks_obtained = 3;
  int32 total_marks = 4;
  string grade = 5;
}

